fix covers-class

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -122,6 +122,10 @@
 /* Desktop */
 
 @media screen and (min-width: 1440px) {
+    .covers {
+        padding: 82px 0px;
+    }
+
     .content {
         height: 960px;
     }
